terraform/azure/subnets.tf
resource "azurerm_subnet" "subnet_aks" {
  name                 = "snet-aks"
  resource_group_name  = azurerm_resource_group.rg.name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = local.subnet_aks_address_prefixes
}
